--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <link rel="stylesheet" href="/frontend/public/assets/css/main.css">
         <!--scripts-->
         <script src="https://kit.fontawesome.com/faf5d1e340.js" crossorigin="anonymous"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166248605-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-166248605-1');
+        </script>
     </head>
     <body>
 
